--- a/sass/partials/_palette.scss
+++ b/sass/partials/_palette.scss
@@ -1,4 +1,4 @@
-$background-colour: #90d4e0;
+$background-colour: rgba(144, 212, 224, 0.55);
 $textarea-border-colour: #568ea3;
 $textarea-background-colour: #ffe8d1;
 $textarea-text-colour: #97725e;
