--- a/sass/partials/_palette.scss
+++ b/sass/partials/_palette.scss
@@ -1,5 +1,5 @@
 $background-colour: rgba(144, 212, 224, 0.55);
 $textarea-border-colour: #568ea3;
-$textarea-background-colour: #ffe8d1;
-$textarea-text-colour: #97725e;
+$textarea-background-colour: rgba(255, 232, 209, 0.5);
+$textarea-text-colour: #7d5f4f;
 $heading-text-colour: #665352;
