--- a/sass/pages/mainPage.scss
+++ b/sass/pages/mainPage.scss
@@ -16,6 +16,9 @@ body {
     &-english-container {
         text-align: center;
         &-textarea {
+            @include typography.textarea-font;
+            background-color: palette.$textarea-background-colour;
+            padding: 15px;
             resize: none;
             @include layout.textarea-border(
                 2px,
@@ -28,6 +31,9 @@ body {
     &-morse-container {
         text-align: center;
         &-textarea {
+            @include typography.textarea-font;
+            background-color: palette.$textarea-background-colour;
+            padding: 15px;
             resize: none;
             @include layout.textarea-border(
                 2px,
