--- a/sass/pages/mainPage.scss
+++ b/sass/pages/mainPage.scss
@@ -26,6 +26,10 @@ body {
                 palette.$heading-text-colour
             );
         }
+
+        &-heading {
+            @include typography.heading-font(large);
+        }
     }
 
     &-morse-container {
@@ -40,6 +44,10 @@ body {
                 solid,
                 palette.$heading-text-colour
             );
+        }
+
+        &-heading {
+            @include typography.heading-font(large);
         }
     }
 }
